<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp"
    tools:context=".MainActivity"
    android:theme="@style/Theme.Calculator">

    <TextView
        android:id="@+id/resultField"
        android:layout_width="371dp"
        android:layout_height="97dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="16dp"
        android:background="#F1D5B3"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/numberField"
        android:layout_width="368dp"
        android:layout_height="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="24dp"
        android:allowUndo="true"
        android:ems="10"
        android:hint="@string/zero"
        android:inputType="number"
        android:singleLine="false"
        app:layout_constraintBottom_toTopOf="@+id/fourthButtonPanel"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/fourthButtonPanel"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/thirdButtonPanel">

        <Button
            android:id="@+id/button16"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#AA957E"
            android:fontFamily="sans-serif-condensed-light"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:onClick="onOperationClick"
            android:text="@string/percent"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#5D4037"
            android:textSize="27sp"
            android:typeface="monospace" />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#AA957E"
            android:fontFamily="sans-serif-condensed-light"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/square"
            android:textColor="#351C01"
            android:textSize="24sp"
            android:typeface="monospace"
            app:iconTint="#AA957E" />

        <Button
            android:id="@+id/button15"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:backgroundTint="#AA957E"
            android:fontFamily="sans-serif-condensed-light"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:onClick="onOperationClick"
            android:text="@string/multiply"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#351C01"
            android:textSize="27sp"
            android:typeface="monospace" />

        <Button
            android:id="@+id/button14"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:backgroundTint="#AA957E"
            android:fontFamily="sans-serif-condensed-light"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            android:onClick="onOperationClick"
            android:text="@string/clear"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#351C01"
            android:textSize="27sp"
            android:typeface="monospace" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/thirdButtonPanel"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/secondButtonPanel">

        <Button
            android:id="@+id/button18"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#AA957E"
            android:fontFamily="sans-serif-condensed-light"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:onClick="onOperationClick"
            android:text="@string/divide"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#351C01"
            android:textSize="27sp"
            android:typeface="monospace" />

        <Button
            android:id="@+id/button19"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:backgroundTint="#F4D8BA"
            android:fontFamily="sans-serif-condensed-light"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:onClick="onNumberClick"
            android:text="@string/seven"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#351C01"
            android:textSize="27sp"
            android:typeface="monospace" />

        <Button
            android:id="@+id/button20"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:backgroundTint="#F4D8BA"
            android:fontFamily="sans-serif-condensed-light"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:onClick="onNumberClick"
            android:text="@string/eight"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#351C01"
            android:textSize="27sp"
            android:typeface="monospace" />

        <Button
            android:id="@+id/button17"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:backgroundTint="#F4D8BA"
            android:fontFamily="sans-serif-condensed-light"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:onClick="onNumberClick"
            android:text="@string/nine"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#351C01"
            android:textSize="27sp"
            android:typeface="monospace" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/secondButtonPanel"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/firstButtonPanel"
        tools:layout_editor_absoluteX="8dp">

        <Button
            android:id="@+id/button9"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:backgroundTint="#AA957E"
            android:fontFamily="sans-serif-condensed-light"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:onClick="onOperationClick"
            android:text="@string/minus"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#5D4037"
            android:textSize="34sp"
            android:typeface="monospace" />

        <Button
            android:id="@+id/button12"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#F4D8BA"
            android:fontFamily="sans-serif-condensed-light"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:onClick="onNumberClick"
            android:text="@string/four"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#351C01"
            android:textSize="27sp"
            android:typeface="monospace" />

        <Button
            android:id="@+id/button11"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#F4D8BA"
            android:fontFamily="sans-serif-condensed-light"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:onClick="onNumberClick"
            android:text="@string/fife"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#351C01"
            android:textSize="27sp"
            android:typeface="monospace"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/button10"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#F4D8BA"
            android:fontFamily="sans-serif-condensed-light"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:onClick="onNumberClick"
            android:text="@string/six"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#351C01"
            android:textSize="27sp"
            android:typeface="monospace"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/firstButtonPanel"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginBottom="70dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_constraintStart_toEndOf="@id/zeroButtonPanel">

        <Button
            android:id="@+id/button5"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:backgroundTint="#AA957E"
            android:fontFamily="sans-serif-condensed-light"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:onClick="onOperationClick"
            android:text="@string/plus"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#351C01"
            android:textSize="27sp"
            android:typeface="monospace" />

        <Button
            android:id="@+id/button8"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#F4D8BA"
            android:fontFamily="sans-serif-condensed-light"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:onClick="onNumberClick"
            android:text="@string/one"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#351C01"
            android:textSize="27sp"
            android:typeface="monospace"
            app:iconPadding="0dp" />

        <Button
            android:id="@+id/button7"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:backgroundTint="#F4D8BA"
            android:fontFamily="sans-serif-condensed-light"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:onClick="onNumberClick"
            android:text="@string/two"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#351C01"
            android:textSize="27sp"
            android:typeface="monospace"
            app:iconPadding="0dp" />

        <Button
            android:id="@+id/button6"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:backgroundTint="#F4D8BA"
            android:fontFamily="sans-serif-condensed-light"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:onClick="onNumberClick"
            android:text="@string/three"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#351C01"
            android:textSize="27sp"
            android:typeface="monospace" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/zeroButtonPanel"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button2"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:backgroundTint="#AA957E"
            android:fontFamily="sans-serif-condensed-light"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:onClick="onHistoryClick"
            android:text="@string/history"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#351C01"
            android:textSize="27sp"
            android:typeface="monospace" />

        <Button
            android:id="@+id/buttonClear"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#AA957E"
            android:fontFamily="sans-serif-condensed-light"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:onClick="onOperationClick"
            android:text="@string/comma"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#351C01"
            android:textSize="27sp"
            android:typeface="monospace"
            app:iconPadding="0dp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:backgroundTint="#F4D8BA"
            android:fontFamily="sans-serif-condensed-light"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/zero"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#351C01"
            android:textSize="27sp"
            android:typeface="monospace"
            style="?android:attr/buttonBarButtonStyle"
            android:onClick="onNumberClick"
            app:iconPadding="0dp" />

        <Button
            android:id="@+id/button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:backgroundTint="#AA957E"
            android:fontFamily="sans-serif-condensed-light"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:onClick="onOperationClick"
            android:text="@string/equal"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#351C01"
            android:textSize="27sp"
            android:typeface="monospace" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>